サブイデオロギー関連コード自動追加

--- a/localisation/japanese/generic/geacps_ideologies_l_japanese.yml
+++ b/localisation/japanese/generic/geacps_ideologies_l_japanese.yml
@@ -1,12 +1,12 @@
 ﻿l_japanese:
-# 正統社会主義
+#正統社会主義
  orthodox_socialism:0 "正統社会主義"
  orthodox_socialism_noun:0 "正統社会主義"
  orthodox_socialism_desc:0 "正統社会主義政権"
  orthodox_socialism_drift:0 "日毎の正統社会主義への支援"
  orthodox_socialism_acceptance:0 "正統社会主義との外交容認"
  orthodox_socialism_ideology:0 "正統社会主義"
- orthodox_socialism_ideology_desc:0 ""
+ orthodox_socialism_ideology_desc:0 "正統社会主義とはマルクス主義、レーニン主義を源流とする社会主義思想である。"
  orthodox_socialism_ideology_trait:0 "正統社会主義者"
  bukharinism_ideology:0 "ブハーリン主義"
  bukharinism_ideology_desc:0 ""
@@ -24,15 +24,24 @@
  trotskyism_ideology_desc:0 ""
  trotskyism_ideology_trait:0 "トロツキー主義者"
  
-# 革新社会主義
+#革新社会主義
  progressive_socialism:0 "革新社会主義"
  progressive_socialism_noun:0 "革新社会主義"
  progressive_socialism_desc:0 "革新社会主義政権"
  progressive_socialism_drift:0 "日毎の革新社会主義への支援"
  progressive_socialism_acceptance:0 "革新社会主義との外交容認"
  progressive_socialism_ideology:0 "革新社会主義"
- progressive_socialism_ideology_desc:0 ""
+ progressive_socialism_ideology_desc:0 "革新社会主義とは正統社会主義・社会民主主義いずれの派生でない革新的な社会主義思想である。"
  progressive_socialism_ideology_trait:0 "革新社会主義者"
+ christian_socialism_ideology:0 "キリスト教社会主義"
+ christian_socialism_ideology_desc:0 ""
+ christian_socialism_ideology_trait:0 "キリスト教社会主義者"
+ nasserism_ideology:0 "ナセル主義"
+ nasserism_ideology_desc:0 ""
+ nasserism_ideology_trait:0 "ナセル主義者"
+ syndicalism_ideology:0 "労働組合主義"
+ syndicalism_ideology_desc:0 ""
+ syndicalism_ideology_trait:0 "労働組合主義者"
  
 #社会民主主義
  social_democracy:0 "社会民主主義"
@@ -41,8 +50,17 @@
  social_democracy_drift:0 "日毎の社会民主主義への支援"
  social_democracy_acceptance:0 "社会民主主義との外交容認"
  social_democracy_ideology:0 "社会民主主義"
- social_democracy_ideology_desc:0 ""
+ social_democracy_ideology_desc:0 "社会民主主義とは民主制の維持と暴力革命とプロレタリア独裁の否定を行った穏健的な社会主義思想である。"
  social_democracy_ideology_trait:0 "社会民主主義者"
+ democratic_socialism_ideology:0 "民主社会主義"
+ democratic_socialism_ideology_desc:0 ""
+ democratic_socialism_ideology_trait:0 "民主社会主義者"
+ left_christian_democracy_ideology:0 "左派キリスト教民主主義"
+ left_christian_democracy_ideology_desc:0 ""
+ left_christian_democracy_ideology_trait:0 "左派キリスト教民主主義者"
+ liberal_socialism_ideology:0 "自由社会主義"
+ liberal_socialism_ideology_desc:0 ""
+ liberal_socialism_ideology_trait:0 "自由社会主義者"
  
 #自由民主主義
  liberal_democracy:0 "自由民主主義"
@@ -51,11 +69,17 @@
  liberal_democracy_drift:0 "日毎の自由民主主義への支援"
  liberal_democracy_acceptance:0 "自由民主主義との外交容認"
  liberal_democracy_ideology:0 "自由民主主義"
- liberal_democracy_ideology_desc:0 ""
+ liberal_democracy_ideology_desc:0 "自由民主主義とは経済や政治に対する自由を重視する民主主義の政治思想である。"
  liberal_democracy_ideology_trait:0 "自由民主主義者"
+ classical_liberalism_ideology:0 "古典的自由主義"
+ classical_liberalism_ideology_desc:0 ""
+ classical_liberalism_ideology_trait:0 "古典的自由主義者"
  conservative_liberalism_ideology:0 "保守自由主義"
  conservative_liberalism_ideology_desc:0 ""
  conservative_liberalism_ideology_trait:0 "保守自由主義者"
+ social_liberalism_ideology:0 "社会自由主義"
+ social_liberalism_ideology_desc:0 ""
+ social_liberalism_ideology_trait:0 "社会自由主義者"
  
 #保守民主主義
  conservative_democracy:0 "保守民主主義"
@@ -64,14 +88,17 @@
  conservative_democracy_drift:0 "日毎の保守民主主義への支援"
  conservative_democracy_acceptance:0 "保守民主主義との外交容認"
  conservative_democracy_ideology:0 "保守民主主義"
- conservative_democracy_ideology_desc:0 ""
+ conservative_democracy_ideology_desc:0 "保守民主主義とは伝統や政治に対する保守を重視する民主主義の政治思想である。"
  conservative_democracy_ideology_trait:0 "保守民主主義者"
- christian_democracy_ideology:0 "キリスト教民主主義"
- christian_democracy_ideology_desc:0 ""
- christian_democracy_ideology_trait:0 "キリスト教民主主義者"
+ agrarianism_ideology:0 "農耕主義"
+ agrarianism_ideology_desc:0 ""
+ agrarianism_ideology_trait:0 "農耕主義者"
  liberal_conservatism_ideology:0 "自由保守主義"
  liberal_conservatism_ideology_desc:0 ""
  liberal_conservatism_ideology_trait:0 "自由保守主義者"
+ right_christian_democracy_ideology:0 "右派キリスト教民主主義"
+ right_christian_democracy_ideology_desc:0 ""
+ right_christian_democracy_ideology_trait:0 "右派キリスト教民主主義者"
  
 #権威民主主義
  authoritative_democracy:0 "権威民主主義"
@@ -80,7 +107,7 @@
  authoritative_democracy_drift:0 "日毎の権威民主主義への支援"
  authoritative_democracy_acceptance:0 "権威民主主義との外交容認"
  authoritative_democracy_ideology:0 "権威民主主義"
- authoritative_democracy_ideology_desc:0 ""
+ authoritative_democracy_ideology_desc:0 "権威民主主義とは強い権力と部分的な民主制度を兼ね備えた民主主義の政治思想である。"
  authoritative_democracy_ideology_trait:0 "権威民主主義者"
  authoritarian_conservatism_ideology:0 "権威保守主義"
  authoritarian_conservatism_ideology_desc:0 ""
@@ -88,9 +115,9 @@
  kemalism_ideology:0 "ケマル主義"
  kemalism_ideology_desc:0 ""
  kemalism_ideology_trait:0 "ケマル主義者"
- provisional_government_ideology:0 "臨時政府"
- provisional_government_ideology_desc:0 ""
- provisional_government_ideology_trait:0 "臨時政府派"
+ provisional_oligarchy_ideology:0 "臨時的寡頭主義"
+ provisional_oligarchy_ideology_desc:0 "臨時的寡頭主義とは、他国の占領から解放される際や革命の際に国内で組織される臨時政府、あるいは政変や他国の占領によって国外で組織される亡命政府など、一時的に設立される寡頭体制を指す。"
+ provisional_oligarchy_ideology_trait:0 "臨時的寡頭主義者"
  
 #国家権威主義
  national_authoritarianism:0 "国家権威主義"
@@ -99,11 +126,20 @@
  national_authoritarianism_drift:0 "日毎の国家権威主義への支援"
  national_authoritarianism_acceptance:0 "国家権威主義との外交容認"
  national_authoritarianism_ideology:0 "国家権威主義"
- national_authoritarianism_ideology_desc:0 ""
+ national_authoritarianism_ideology_desc:0 "国家権威主義とは権威主義的で統制的、保守的な政治思想である。"
  national_authoritarianism_ideology_trait:0 "国家権威主義者"
- colonial_government_ideology:0 "植民地政府"
- colonial_government_ideology_desc:0 ""
- colonial_government_ideology_trait:0 "植民地政府派"
+ absolutism_ideology:0 "絶対主義"
+ absolutism_ideology_desc:0 ""
+ absolutism_ideology_trait:0 "絶対主義者"
+ colonialism_ideology:0 "植民地主義"
+ colonialism_ideology_desc:0 ""
+ colonialism_ideology_trait:0 "植民地主義者"
+ militarism_ideology:0 "軍国主義"
+ militarism_ideology_desc:0 ""
+ militarism_ideology_trait:0 "軍国主義者"
+ warlordism_ideology:0 "軍閥主義"
+ warlordism_ideology_desc:0 ""
+ warlordism_ideology_trait:0 "軍閥主義者"
  
 #国家大衆主義
  national_populism:0 "国家大衆主義"
@@ -112,8 +148,11 @@
  national_populism_drift:0 "日毎の国家大衆主義への支援"
  national_populism_acceptance:0 "国家大衆主義との外交容認"
  national_populism_ideology:0 "国家大衆主義"
- national_populism_ideology_desc:0 ""
+ national_populism_ideology_desc:0 "国家大衆主義とは国家・指導者への忠誠や栄光・理想への回帰を尊ぶ政治思想である。"
  national_populism_ideology_trait:0 "国家大衆主義者"
+ fascism_ideology:0 "結束主義"
+ fascism_ideology_desc:0 ""
+ fascism_ideology_trait:0 "結束主義者"
  francoism_ideology:0 "フランコ主義"
  francoism_ideology_desc:0 "フランコ主義とは、権威主義や反共産主義、スペイン民族主義、国家カトリック、君主主義、軍国主義、国民保守主義、反フリーメーソン、反カタロニア主義、汎ヒスパニア主義、反自由主義を包括した思想である。"
  francoism_ideology_trait:0 "フランコ主義者"
