イデオロギー関連

--- a/localisation/english/generic/geacps_ideologies_l_english.yml
+++ b/localisation/english/generic/geacps_ideologies_l_english.yml
@@ -67,7 +67,7 @@
  marxism-leninism_ideology_desc:0 ""
  maoism_ideology:0 "Maoism"
  maoism_ideology_desc:0 ""
- christian_democracy_ideology:0 "Christian Democracy"
+ right_christian_democracy_ideology:0 "Christian Democracy"
  christian_democracy_ideology_desc:0 ""
  conservative_liberalism_ideology:0 "Conservative Liberalism"
  conservative_liberalism_ideology_desc:0 ""
@@ -89,13 +89,13 @@
  christian_democracy_ideology_trait:0 "Christian Democrat"
  authoritative_democracy_ideology_trait:0 "Authoritarian Democrat"
  authoritarian_conservatism_ideology_trait:0 "Authoritarian Conservatist"
- provisional_government_ideology:0 "Provisional Government"
- provisional_government_ideology_desc:0 ""
- provisional_government_ideology_trait:0 "Provisional Government Faction"
+ provisional_oligarchy_ideology:0 "Provisional Government"
+ provisional_oligarchy_ideology_desc:0 ""
+ provisional_oligarchy_ideology_trait:0 "Provisional Government Faction"
  national_authoritarianism_ideology_trait:0 "National Authoritarianist"
- colonial_government_ideology:0 "Colonial Government"
- colonial_government_ideology_desc:0 ""
- colonial_government_ideology_trait:0 "Colonial Government Faction"
+ colonialism_ideology:0 "Colonial Government"
+ colonialism_ideology_desc:0 ""
+ colonialism_ideology_trait:0 "Colonial Government Faction"
  national_populism_ideology_trait:0 "National Populist"
  francoism_ideology_trait:0 "Francoist"
  national_socialism_ideology_trait:0 "National Socialist"
