--- a/localisation/japanese/generic/geacps_ideologies_l_japanese.yml
+++ b/localisation/japanese/generic/geacps_ideologies_l_japanese.yml
@@ -81,6 +81,25 @@
  social_liberalism_ideology_desc:0 ""
  social_liberalism_ideology_trait:0 "社会自由主義者"
  
+#中立中道主義
+ neutral_centrism:0 "中立中道主義"
+ neutral_centrism_noun:0 "中立中道主義"
+ neutral_centrism_desc:0 "中立中道主義政権"
+ neutral_centrism_drift:0 "日毎の中立中道主義への支援"
+ neutral_centrism_acceptance:0 "中立中道主義との外交容認"
+ neutral_centrism_ideology:0 "中立中道主義"
+ neutral_centrism_ideology_desc:0 "中立中道主義とは保守や革新に偏らない政治思想である。"
+ neutral_centrism_ideology_trait:0 "中立中道主義者"
+ anarchy_ideology:0 "無政府状態"
+ anarchy_ideology_desc:0 ""
+ anarchy_ideology_trait:0 "無政府状態"
+ national_unity_government_ideology:0 "挙国一致政府"
+ national_unity_government_ideology_desc:0 ""
+ national_unity_government_ideology_trait:0 "挙国一致政府"
+ nonpartisanism_ideology:0 "無党派主義"
+ nonpartisanism_ideology_desc:0 ""
+ nonpartisanism_ideology_trait:0 "無党派主義者"
+ 
 #保守民主主義
  conservative_democracy:0 "保守民主主義"
  conservative_democracy_noun:0 "保守民主主義"
