--- a/localisation/japanese/countries_asia/geacps_JAP_l_japanese.yml
+++ b/localisation/japanese/countries_asia/geacps_JAP_l_japanese.yml
@@ -222,10 +222,19 @@
  JAP.8.d:0 "皇道派将校の裁判"
  JAP.8.0:0 "どのくらい獄中に送れば気が済むのだろうか..."
  JAP.8.1:0 "妥協点を探る"
- 
+
  JAP.100.t:0 "武漢作戦"
  JAP.100.d:0 "武漢作戦"
  JAP.100.0:0 "祝武漢入城"
+ 
+ JAP.101.t:0 "中華民国臨時政府と中華民国維新政府の統合を要請"
+ JAP.101.d:0 "中華民国臨時政府と中華民国維新政府の統合を要請"
+ JAP.101.0:0 "現状維持"
+ JAP.101.1:0 "統一"
+ JAP.102.t:0 "日本からの統合要請"
+ JAP.102.d:0 "日本からの統合要請"
+ JAP.102.0:0 "拒否"
+ JAP.102.1:0 "受諾"
  
  JAP_military.001.t:0 "海軍を主導する人材の選定"
  JAP_military.001.d:0 "太平洋戦争では今までの戦争とは打って変わった戦法も重要であることが分かった。これらのことを踏まえ、我々はこれからの時代の帝国艦隊を率いていく人材を選定する必要がある。これは国家の存亡にかかわる重大な事案であり、慎重に考えなければならない・・・"
