イベント微調整

--- a/localisation/japanese/countries_asia/geacps_CHI_l_japanese.yml
+++ b/localisation/japanese/countries_asia/geacps_CHI_l_japanese.yml
@@ -1,29 +1,44 @@
 ﻿l_japanese:
 # 国家方針
- 
+
 
 # 国民精神
- CHI_war_of_17_years:0 "17年間の戦争"
- CHI_war_of_17_years_desc:0 "この国はずっと戦い続けている。本当にずっと。"
- CHI_warloads:0 "軍閥"
- CHI_warloads_desc:0 "大清帝国の崩壊より、各地を実効支配する軍閥が存在している。彼らを懐柔するか、徹底的に弾圧しなければ我々の声を地方まで届けることはできない。"
- CHI_northern_expedition:0 "北伐"
- CHI_northern_expedition_desc:0 "主に共産主義勢力の排除を目的に行われた北伐は未だに終わる気配がない"
- CHI_lost_democracy:0 "失われた民主主義"
- CHI_lost_democracy_desc:0 "中華民国は中華で初めての民主主義国家である。少なくとも形式上は。"
- CHI_changed_capital_once:0 "一度の遷都"
- CHI_changed_capital_once_desc:0 "この国は首都南京を失った。"
- CHI_changed_capital_twice:0 "二度の遷都"
- CHI_changed_capital_twice_desc:0 "この国は南京のみならず武漢も失った。"
- CHI_small_support_from_USA:0 "米国からのささやかな支援"
- CHI_small_support_from_USA_desc:0 "米国は我々がこの大陸で覇権を取ることを望み、支援を行っている。いや、正確には行っていた。"
+CHI_war_of_17_years:0 "17年間の戦争"
+CHI_war_of_17_years_desc:0 "この国はずっと戦い続けている。本当にずっと。"
+CHI_warloads:0 "軍閥"
+CHI_warloads_desc:0 "大清帝国の崩壊より、各地を実効支配する軍閥が存在している。彼らを懐柔するか、徹底的に弾圧しなければ我々の声を地方まで届けることはできない。"
+CHI_northern_expedition:0 "北伐"
+CHI_northern_expedition_desc:0 "主に共産主義勢力の排除を目的に行われた北伐は未だに終わる気配がない"
+CHI_lost_democracy:0 "失われた民主主義"
+CHI_lost_democracy_desc:0 "中華民国は中華で初めての民主主義国家である。少なくとも形式上は。"
+CHI_changed_capital_once:0 "一度の遷都"
+CHI_changed_capital_once_desc:0 "この国は首都南京を失った。"
+CHI_changed_capital_twice:0 "二度の遷都"
+CHI_changed_capital_twice_desc:0 "この国は南京のみならず武漢も失った。"
+CHI_small_support_from_USA:0 "米国からのささやかな支援"
+CHI_small_support_from_USA_desc:0 "米国は我々がこの大陸で覇権を取ることを望み、支援を行っている。いや、正確には行っていた。"
 
 # ディシジョン
- 
+
 
 # イベント
- 
+CHIandJAP.0.t:0 "何柱国工作"
+CHIandJAP.0.d:0 "日本帝国より届きし和平工作の申し出。今、我が中華民国は重大なる選択を迫られたり。帝国の要求に従い、和平を成立させれば、大東亜共栄圏の一翼を担うこととなり、戦後の平和を築く好機を得ることとなる。しかしながら、この道を選ぶことは我が民族の主権と独立を損なう危険を孕む。全民族が一丸となり、この難局を乗り越えるべき時が来たり。"
+CHIandJAP.0.0:0 "直ちに和平交渉に応じ、全民族が一致団結し、この危急の時を乗り越えん。"
+CHIandJAP.0.1:0 "和平交渉を固く拒否し、国家の存続を賭けて最後の一滴まで守り抜かん。"
+CHIandJAP.1.t:0 "汪・蔣政権の合作提案"
+CHIandJAP.1.d:0 "我が中華民国に対し、大日本帝国より汪兆銘政権との合作の提案が届いた。これなる提案は我が民族の未来に対し、重大な選択を意味するものなり。帝国の意向に従い、新たな関係を築くことは、我が国家の尊厳を損ないかねぬ。しかしながら、独立と誇りを守るための選択もまた、容易ならざる決断である。"
+CHIandJAP.1.0:0 "汪・蔣政権との合作を受け入れ、帝国との新たな関係を築く"
+CHIandJAP.1.1:0 "合作を断固として拒否し、我が民族の誇りを守る"
+CHIandJAP.2.t:0 "併合と賠償の要求"
+CHIandJAP.2.d:0 "大日本帝国より、我が中華民国に対し併合と賠償を強硬に要求する意向が示された。この要求は我が国の尊厳を著しく損ない、国家としての誇りを脅かすものである。帝国の要求を受け入れ、屈辱を甘受するべきか、それとも最後まで誇り高く抵抗し続けるべきか、国家としての決断が問われる。"
+CHIandJAP.2.0:0 "併合と賠償を受け入れ、帝国の要求に従う"
+CHIandJAP.2.1:0 "要求を拒絶し、誇りをかけて抵抗する"
+CHIandJAP.3.t:0 "日本の権益拡大要求"
+CHIandJAP.3.d:0 "我が中華民国に対し、大日本帝国は中国大陸における権益の拡大を強く要求してきた。この要求は、我が国の主権を侵害し、国家の尊厳を著しく脅かすものである。帝国の要求を受け入れ、権益を拡大することで協力関係を築くべきか、それとも国家の主権を守るために断固として拒否すべきか、真剣に考えねばならぬ時が来た。"
+CHIandJAP.3.0:0 "権益の拡大を受け入れ、帝国との協力を強化する"
+CHIandJAP.3.1:0 "権益の拡大を断固として拒否し、主権を守り抜く"
 
 # ツールチップ
- CHI_kind_peace:0 "寛容な講和"
- CHI_pressure_on_our_country:0 "我が国に対する圧力"
+CHI_kind_peace:0 "寛容な講和"
+CHI_pressure_on_our_country:0 "我が国に対する圧力"
