イベントおよびデシジョン追加

--- a/localisation/japanese/countries_asia/geacps_CHI_l_japanese.yml
+++ b/localisation/japanese/countries_asia/geacps_CHI_l_japanese.yml
@@ -1,6 +1,9 @@
 ﻿l_japanese:
 # 国家方針
-
+CHI_victory:0 "勝利!"
+CHI_victory_desc:0 "長きにわたる戦火の末に、我が中華民国は堂々たる勝利を収めたり。この勝利は、国民の力と不屈の意志の結晶に他ならず、国家の誇りを再び高める契機となるべし。今後の方針を定め、戦後の国の復興と国際的地位の強化に向けた道を選ぶ時が来たり。"
+CHI_surrender:0 "降伏..."
+CHI_surrender_desc:0 "日中戦争の敗北により、我が中華民国は困難な状況に直面す。我が国は日本の圧力に屈し、占領下にあらんとす。この試練を乗り越え、国の未来を確保するために、どのような選択をするべきかを思案せねばならぬ時が訪れたり。"
 
 # 国民精神
 CHI_war_of_17_years:0 "17年間の戦争"
@@ -22,10 +25,14 @@ CHI_small_support_from_USA_desc:0 "米国は我々がこの大陸で覇権を取
 
 
 # イベント
+CHI.1.t:0 "中華民国敗戦後の混乱"
+CHI.1.d:0 "日中戦争に敗北し、中華民国は激しい混乱に陥る。敗戦により国家の威信は失墜し、各地で民族独立運動が過激化し、国内の政治状況も著しく悪化せり。地方軍閥の反乱や暴動が相次ぎ、国家の統制は失われつつあり、内乱の危機が現実のものとなりつつある。この混迷の中、我が国は如何にしてこの難局を乗り越えるべきか。"
+CHI.1.0:0 "国家を立て直すべく、非常事態宣言を発せよ"
+
 CHIandJAP.0.t:0 "何柱国工作"
 CHIandJAP.0.d:0 "日本帝国より届きし和平工作の申し出。今、我が中華民国は重大なる選択を迫られたり。帝国の要求に従い、和平を成立させれば、大東亜共栄圏の一翼を担うこととなり、戦後の平和を築く好機を得ることとなる。しかしながら、この道を選ぶことは我が民族の主権と独立を損なう危険を孕む。全民族が一丸となり、この難局を乗り越えるべき時が来たり。"
-CHIandJAP.0.0:0 "直ちに和平交渉に応じ、全民族が一致団結し、この危急の時を乗り越えん。"
-CHIandJAP.0.1:0 "和平交渉を固く拒否し、国家の存続を賭けて最後の一滴まで守り抜かん。"
+CHIandJAP.0.0:0 "直ちに和平交渉に応じ、全民族が一致団結し、この危急の時を乗り越えん"
+CHIandJAP.0.1:0 "和平交渉を固く拒否し、国家の存続を賭けて最後の一滴まで守り抜かん"
 CHIandJAP.1.t:0 "汪・蔣政権の合作提案"
 CHIandJAP.1.d:0 "我が中華民国に対し、大日本帝国より汪兆銘政権との合作の提案が届いた。これなる提案は我が民族の未来に対し、重大な選択を意味するものなり。帝国の意向に従い、新たな関係を築くことは、我が国家の尊厳を損ないかねぬ。しかしながら、独立と誇りを守るための選択もまた、容易ならざる決断である。"
 CHIandJAP.1.0:0 "汪・蔣政権との合作を受け入れ、帝国との新たな関係を築く"
@@ -38,6 +45,10 @@ CHIandJAP.3.t:0 "日本の権益拡大要求"
 CHIandJAP.3.d:0 "我が中華民国に対し、大日本帝国は中国大陸における権益の拡大を強く要求してきた。この要求は、我が国の主権を侵害し、国家の尊厳を著しく脅かすものである。帝国の要求を受け入れ、権益を拡大することで協力関係を築くべきか、それとも国家の主権を守るために断固として拒否すべきか、真剣に考えねばならぬ時が来た。"
 CHIandJAP.3.0:0 "権益の拡大を受け入れ、帝国との協力を強化する"
 CHIandJAP.3.1:0 "権益の拡大を断固として拒否し、主権を守り抜く"
+
+CHIandJAP_form.0.t:0 "日本帝国の圧力に対する[ROOT.GetName]の決断"
+CHIandJAP_form.0.d:0 "大日本帝国より、中華民国臨時政府と維新政府の統合に関する提案が届いた。帝国の意向に従い、統合を進めるべきか、またはその指示を無視して国の将来を自らの手で切り開くべきか。国家の未来をかけた重要な選択が迫られているが、現実には帝国の圧力に逆らう余地は少ない。"
+CHIandJAP_form.0.0:0 "日本帝国の提案を受け入れ、即刻統合を進めるべし"
 
 # ツールチップ
 CHI_kind_peace:0 "寛容な講和"
