--- a/localisation/japanese/countries_asia/geacps_JAP_l_japanese.yml
+++ b/localisation/japanese/countries_asia/geacps_JAP_l_japanese.yml
@@ -252,10 +252,9 @@ JAPandCHI.7.t:0 "中華民国の主権護持、我が外交工作の頓挫"
 JAPandCHI.7.d:0 "我が大日本帝国が提案した条件が中華民国によって拒絶された。特に中国大陸での権益の拡大要求が断固として拒否され、我が帝国の外交工作が失敗に終わった。これは我が国の計画に対する大きな挫折であり、今後の戦略を再考せざるを得ない状況となった。我が帝国の威光を取り戻すためには、新たな対策が必要だ。"
 JAPandCHI.7.0:0 "戦略を再編成し、さらなる圧力をかける方策を講じる"
 
-JAP.101.t:0 "中華民国臨時政府と中華民国維新政府の統合を要請"
-JAP.101.d:0 "中華民国臨時政府と中華民国維新政府の統合を要請"
-JAP.101.0:0 "現状維持"
-JAP.101.1:0 "統一"
+JAPandCHI_form.0.t:0 "中華民国臨時政府及び維新政府の統合に関する我が国の提案"
+JAPandCHI_form.0.d:0 "我が大日本帝国は、支那大陸の現状を深く憂慮し、これに対し重要な提案をなす。混乱と対立が続く中華民国に対し、臨時政府と維新政府が手を携え、一致団結して国家の再建を図ることが、地域の安定と我が国の戦略的利益に繋がると信ずる。この提案を受け入れ、支那大陸の安寧を共に確立せん。"
+JAPandCHI_form.0.0:0 "中華民国臨時政府と維新政府の統合を推進せよ"
 JAP.102.t:0 "日本からの統合要請"
 JAP.102.d:0 "日本からの統合要請"
 JAP.102.0:0 "拒否"
@@ -277,8 +276,8 @@ JAP_military.003.1:0 "海軍"
 JAP_military.003.2:0 "空軍"
 
 # ディシジョン
-JAP_Coup_detat_in_the_offing:0 "クーデターの予感"
-JAP_Coup_detat_in_the_offing_desc:0 "憲兵の情報によると、帝國における反政府運動が激化しようとしているらしい。\n具体的にどの様な人物、もしくは組織が裏に潜んでいるかの情報は掴めてはいないものの、帝都の占拠の後、政府首脳・重臣への襲撃を計画しているらしい。\nこの馬鹿馬鹿しい計画に対し、どの様に行動すべきだろうか？"
+JAP_coup_detat_in_the_offing:0 "クーデターの予感"
+JAP_coup_detat_in_the_offing_desc:0 "憲兵の情報によると、帝國における反政府運動が激化しようとしているらしい。\n具体的にどの様な人物、もしくは組織が裏に潜んでいるかの情報は掴めてはいないものの、帝都の占拠の後、政府首脳・重臣への襲撃を計画しているらしい。\nこの馬鹿馬鹿しい計画に対し、どの様に行動すべきだろうか？"
 Outbreak_of_the_1-22_Incident:0 "一・二二事件"
 Outbreak_of_the_1-22_Incident_desc:0 "一・二二事件"
 JAP_national_policy_research_outline:0 "国策研究大綱"
