議会タブ追加計画
ﾑﾂｶｼｲﾈ

--- a/localisation/japanese/generic/geacps_political_tab_l_japanese.yml
+++ b/localisation/japanese/generic/geacps_political_tab_l_japanese.yml
@@ -1,77 +1,80 @@
 ﻿l_japanese:
-# # 政治タブ
+## 政治タブ
+# 議会
+MANAGE_PARLIAMENT_HEADER:0 "議会"
+
 # 政府形態
- government_forms:0 "政府形態"
- national_system:0 "国家体制"
- political_system:0 "政治体制"
- 
+government_forms:0 "政府形態"
+national_system:0 "国家体制"
+political_system:0 "政治体制"
+
 # 内閣
- cabinet:0 "内閣"
- head_of_government:0 "政府首班"
- foreign_minister:0 "外務大臣"
- home_minister:0 "内務大臣"
- commerce_minister:0 "商工大臣"
- military_minister:0 "軍政大臣"
- army_minister:0 "陸軍大臣"
- navy_minister:0 "海軍大臣"
- air_force_minister:0 "空軍大臣"
- political_advisor:0 "政府顧問"
- 
+cabinet:0 "内閣"
+head_of_government:0 "政府首班"
+foreign_minister:0 "外務大臣"
+home_minister:0 "内務大臣"
+commerce_minister:0 "商工大臣"
+military_minister:0 "軍政大臣"
+army_minister:0 "陸軍大臣"
+navy_minister:0 "海軍大臣"
+air_force_minister:0 "空軍大臣"
+political_advisor:0 "政府顧問"
+
 # 法律
- law_category:0 "法律"
- economy:0 "経済法"
- trade_laws:0 "貿易法"
- mobilization_laws:0 "徴兵法"
+law_category:0 "法律"
+economy:0 "経済法"
+trade_laws:0 "貿易法"
+mobilization_laws:0 "徴兵法"
 
 # 軍部
- military_category:0 "軍部"
+military_category:0 "軍部"
 
 # その他
- company_category:0 "企業"
+company_category:0 "企業"
 
-# # 政治アイディア
+## 政治アイディア
 # 国家体制
- monarchy_city_state:0 "君主制都市国家"
- monarchy_unitary_state:0 "君主制単一国家"
- monarchy_federal_state:0 "君主制連邦国家"
- republic_city_state:0 "共和制都市国家"
- republic_unitary_state:0 "共和制単一国家"
- republic_federal_state:0 "共和制連邦国家"
- unitary_dependent_territory:0 "単一属領"
- federal_dependent_territory:0 "連邦属領"
- anarchy_territory:0 "無政府地域"
- 
+monarchy_city_state:0 "君主制都市国家"
+monarchy_unitary_state:0 "君主制単一国家"
+monarchy_federal_state:0 "君主制連邦国家"
+republic_city_state:0 "共和制都市国家"
+republic_unitary_state:0 "共和制単一国家"
+republic_federal_state:0 "共和制連邦国家"
+unitary_dependent_territory:0 "単一属領"
+federal_dependent_territory:0 "連邦属領"
+anarchy_territory:0 "無政府地域"
+
 # 政治体制
- parliamentary_cabinet_system:0 "議院内閣体制"
- presidential_system:0 "大統領制"
- semi_presidential_system:0 "半大統領制"
- monarch_dictatorial_system:0 "君主独裁体制"
- civilian_dictatorial_system:0 "文民独裁体制"
- military_dictatorial_system:0 "軍部独裁体制"
- committee_system:0 "委員会体制"
- imperial_rule_assistance_system:0 "翼賛体制"
- dependent_territory_direct_rule_system:0 "属領直接統治体制"
- dependent_territory_indirect_rule_system:0 "属領間接統治体制"
- provisional_government:0 "臨時政府"
- anarchy_state:0 "無政府状態"
- 
+parliamentary_cabinet_system:0 "議院内閣体制"
+presidential_system:0 "大統領制"
+semi_presidential_system:0 "半大統領制"
+monarch_dictatorial_system:0 "君主独裁体制"
+civilian_dictatorial_system:0 "文民独裁体制"
+military_dictatorial_system:0 "軍部独裁体制"
+committee_system:0 "委員会体制"
+imperial_rule_assistance_system:0 "翼賛体制"
+dependent_territory_direct_rule_system:0 "属領直接統治体制"
+dependent_territory_indirect_rule_system:0 "属領間接統治体制"
+provisional_government:0 "臨時政府"
+anarchy_state:0 "無政府状態"
+
 # 経済法
- nationally_planned_economy:0 "国家計画経済"
- self_managed_economy:0 "自主管理経済"
- mixed_economy:0 "混合経済"
- market_intervention_economy:0 "市場介入経済"
- market_laissez_faire_economy:0 "市場放任経済"
- 
+nationally_planned_economy:0 "国家計画経済"
+self_managed_economy:0 "自主管理経済"
+mixed_economy:0 "混合経済"
+market_intervention_economy:0 "市場介入経済"
+market_laissez_faire_economy:0 "市場放任経済"
+
 # 貿易法
- self_reliant_economy:0 "自立経済"
- protective_trade:0 "保護貿易"
- controlled_trade:0 "管理貿易"
- free_trade:0 "自由貿易"
- international_economy:0 "国際経済"
- 
+self_reliant_economy:0 "自立経済"
+protective_trade:0 "保護貿易"
+controlled_trade:0 "管理貿易"
+free_trade:0 "自由貿易"
+international_economy:0 "国際経済"
+
 # 徴兵法
- demilitarisation:0 "武装解除"
- disarmament:0 "軍備縮小"
- voluntary_military_service:0 "志願兵役"
- partial_conscription:0 "部分徴兵"
- universal_conscription:0 "国民皆兵"
+demilitarisation:0 "武装解除"
+disarmament:0 "軍備縮小"
+voluntary_military_service:0 "志願兵役"
+partial_conscription:0 "部分徴兵"
+universal_conscription:0 "国民皆兵"
