インデントの標準(タブスペース)化および諸変更

--- a/localisation/japanese/generic/geacps_parliament_l_japanese.yml
+++ b/localisation/japanese/generic/geacps_parliament_l_japanese.yml
@@ -1,4 +1,5 @@
 ﻿l_japanese:
+# 第一院
   AFG_first_chamber_name: "長老議会"
   ALG_first_chamber_name: "国民評議会"
   AUS_first_chamber_name: "連邦議会"
@@ -21,8 +22,8 @@
   MOR_first_chamber_name: "参議院"
   NMB_first_chamber_name: "国民評議会"
   OMA_first_chamber_name: "国家評議会"
-  RUS_supreme_soviet_name: "ソビエト連邦最高会議"
-  RUS_federation_council_name: "連邦院"
+  RUS_soviet_of_nationalities: "民族院"
+  RUS_federation_council: "連邦院"
   SAF_first_chamber_name: "全国州評議会"
   SLV_first_chamber_name: "国民評議会"
   # SPR_first_chamber_name: "スペイン元老院"
@@ -31,6 +32,30 @@
   SWI_first_chamber_name: "全州議会"
   TAJ_first_chamber_name: "国民議会"
   USA_first_chamber_name: "合衆国元老院"
-  WGR_first_chamber_name: "連邦参議院"
+  WGR_first_chamber_name: "帝国参議院"
   SENATE: "元老院"
   FIRST_CHAMBER: "[ROOT.GetName]上院"
+
+# 第二院
+  AFG_second_chamber_name: "人民議会"
+  BLR_second_chamber_name: "代表者院"
+  BRM_second_chamber_name: "人民代表院"
+  ETH_second_chamber_name: "人民代表院"
+  FRA_second_chamber_name: "国民議会"
+  GBR_second_chamber_name: "庶民院"
+  # HOL_second_chamber_name: "第二院"
+  IND_second_chamber_name: "ローク・サバー"
+  IRE_second_chamber_name: "ドイル・エアラン"
+  ITA_second_chamber_name: "共和国代議院"
+  JAP_second_chamber_name: "衆議院"
+  KAZ_second_chamber_name: "マジリス"
+  MOR_second_chamber_name: "衆議院"
+  OMA_second_chamber_name: "諮問評議会"
+  RUS_soviet_of_the_union: "連邦院"
+  RUS_state_duma: "国家院"
+  # SPR_second_chamber_name: "スペイン代議院"
+  USA_second_chamber_name: "合衆国代議院"
+  WGR_second_chamber_name: "国会"
+  HOUSE_OF_REPRESENTATIVES: "代議院"
+  NATIONAL_ASSEMBLY: "国民議会"
+  SECOND_CHAMBER: "[ROOT.GetName]下院"
