scripted_localisation関連(GFX抜き)

--- a/localisation/japanese/generic/geacps_release_country_gui_l_japanese.yml
+++ b/localisation/japanese/generic/geacps_release_country_gui_l_japanese.yml
@@ -91,4 +91,16 @@
   pfk_return_all:0 "全て返還"
   pfk_return_other_than_marked:0 "マークしたステート以外を返還"
 
-
+# 
+ pfk_list_name_z:0 "[?target.GetTokenLocalizedKey]"
+ pfk_list_name_0:0 "[?target.GetNonIdeologyNameDef]"
+ pfk_list_name_1:0 "[pfk_puppet_name]"
+ pfk_list_name_2:0 "[?target.GetTokenLocalizedKey]"
+ 
+ pfk_current_name_z:0 "[?ROOT.pfk_current_target.GetTokenLocalizedKey]"
+ pfk_current_name_0:0 "[?ROOT.pfk_current_target.GetNonIdeologyNameDef]"
+ pfk_current_name_1:0 "[pfk_puppet_name]"
+ 
+ pfk_choice_name_ideology:0 "[?choice.GetNonIdeologyNameDef]"
+ pfk_choice_name_localisation:0 "[?choice.GetTokenLocalizedKey]"
+ 
